--- a/css/main.css
+++ b/css/main.css
@@ -19,4 +19,4 @@
 /* @import "./components/_insp.css"; */
 /* @import "./components/_footer.css"; */
 
-/* @import "_media.css"; */
+@import '_media.css';
